# DeviceManagementAgent

./: .dockerignore  .gitignore  Dockerfile  EMBEDDED_FRPC.md  Justfile  README.md  agent-development.md  availableVersions.json  build-it.sh  check-certs.sh  docker-compose.yaml  docker.go  generate-test-repo.sh  makefile  management-agent.md  targets  wamp.go
.github/: copilot-instructions.md
doc/: README-go.md
docker/: Dockerfile  Dockerfile-wampcc  entrypoint.sh
docs/: SECURITY-SCANNING.md  WINDOWS-CODE-SIGNING.md  WINDOWS-SERVICE-CHECKLIST.md
install/: Makefile  Readme.md  install_reagent.sh
lib/rust/: Cargo.toml
lib/rust/.cargo/: config.toml
lib/rust/crossbar/: benchmark-publish.js  client.js  package-lock.json  package.json
lib/rust/crossbar/.crossbar/: config.json
lib/rust/src/: main.rs
lib/rust/wamp_async/examples/: rpc_callee.rs
pyt/: wamp_management.py
scripts/: build-all.sh  build-frpc.sh  build.sh  check-frp-version.sh  publish-frpc.sh  publish.sh  sign-windows.sh
shl/: build-it.sh  monitor-stats.sh  show-stats.gnuplot
src/: .gitignore  .mockery.yaml  Makefile  README.md  TESTING.md  agent.go  availableVersions.json  build-amd64.sh  build-arm64.sh  build.js  coverage.html  coverage.out  go.mod  go.sum  main.go  platform_other.go  platform_windows.go  publish-amd64.sh  publish-arm5.sh  publish-arm6.sh  publish-arm64.sh  publish-arm7.sh  publish-intel.sh  publish.sh  reagent.db-shm  reagent.db-wal  reconnect-test.sh  service_other.go  service_windows.go  servicecmd.go  servicecmd_test.go  servicecmd_windows.go  test-config.flock
(+337 files in other folders)
