[package]
name = "wamp"
version = "0.1.0"
authors = ["DewitteRuben <ruben.dewitte@proximus.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.3", features = ["full"] }
oldTokio = { version = "0.2.17", features = ["full"], package = "tokio" }
wamp_async = { path = "wamp_async" }
futures-core = "0.3.4"
futures-util = "0.3.4"
bollard = "0.9"
tar = "0.4"
flate2 = "1.0.19"
lazy_static = "1.4.0"
openssl = { version = "0.10", features = ["vendored"] }